Fixed overlap on students show view

--- a/app/assets/stylesheets/students.scss
+++ b/app/assets/stylesheets/students.scss
@@ -2,10 +2,6 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-body {
-  background-color: #fafafa;
-}
-
 .list-h1 {
   text-align: center;
   margin-top: 15px; // Margin between heading and navbar.
@@ -45,4 +41,17 @@ body {
 .page-item {
   box-shadow: none;
   z-index: 0;
+}
+
+// Media query for Student details on show view.
+@media screen and (max-width: 770px) {
+  h1 {
+    font-size: 30px;
+  }
+}
+
+@media screen and (max-width: 510px) {
+  h1 {
+    font-size: 25px;
+  }
 }
